master 0.0.2-SNAPSHOT: - added Europeana import service - added Europeana import frontend - modified database: Video table InnoDB, 1024 char URL, sourceURL unique index - fix: set JPA to use JTA (why else would we struggle to install Bitronix in Tomcat) - fix: added /static resource dir

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -22,3 +22,11 @@ jpa.formatSql=false
 jpa.generateDdl=true
 jpa.persistenceUnitName=nl.waisda
 jpa.hbm2ddl.auto=validate
+
+waisda.import.europeana.baseurl=http://preview.europeana.eu/api/v2/search.json
+waisda.import.europeana.apikey=XxxsEZoWj
+waisda.import.europeana.privkey=ZyFhKLsYC
+waisda.import.europeana.rowsperquery=12
+waisda.import.europeana.profile=standard
+waisda.import.europeana.videoextensions=.mp4, .avi, .mpg
+
