--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>manbijthond-web</artifactId>
 	<packaging>war</packaging>
 	<name>manbijthond</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 
 	<properties>
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
@@ -15,6 +15,16 @@
 	<dependencies>
 
 		<!-- util -->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+		</dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.3</version>
+        </dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -311,9 +321,15 @@
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
 			<version>1.0.1B</version>
-			<scope>test</scope>
+			<scope>test, provided</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>org.codehaus.btm</groupId>
+            <artifactId>btm</artifactId>
+            <version>2.1.3</version>
+            <scope>provided</scope>
+        </dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
