--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # ***** Set root logger level to WARN and its two appenders to stdout and R.
-log4j.rootLogger=debug, stdout, R
+log4j.rootLogger=info, stdout, R
 log4j.category.nl.waisda.services.EuropeanaImportService=debug, europeanaimport
 #log4j.rootLogger=info, stdout
 
