- dictionary matches and frontend notification thereof - unittests (not finished) - fixes for hibernate hbm2dll.auto - cosmetics - [NEED TO RE-BRANCH to europeana-0.0.2-SNAPSHOT]

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -23,10 +23,14 @@ jpa.generateDdl=true
 jpa.persistenceUnitName=nl.waisda
 jpa.hbm2ddl.auto=validate
 
+# europeana import settings
 waisda.import.europeana.baseurl=http://preview.europeana.eu/api/v2/search.json
 waisda.import.europeana.apikey=XxxsEZoWj
 waisda.import.europeana.privkey=ZyFhKLsYC
 waisda.import.europeana.rowsperquery=12
 waisda.import.europeana.profile=standard
 waisda.import.europeana.videoextensions=.mp4, .avi, .mpg
+waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\.\-_]+?\.mp4)
 
+# special match dictionaries (dictionary names separated by cumma)
+waisda.matcher.specialdictionaries=GeografischeNamen,Persoonsnamen
