- registration double click issue fix, made it more robust but less performing due locking - better link to login/register after playing anonymous - fixed score issue in recap summary (matches with others) - fixed tag overview in recap not showing geo/person matches - made social links configurable - removed debugger; line in javascript - added gtaa dictionary insert script - cosmetics - [NEED TO RE-BRANCH to europeana-0.0.2-SNAPSHOT]

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -34,3 +34,8 @@ waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\.\-_]+?\.mp4)
 
 # special match dictionaries (dictionary names separated by cumma)
 waisda.matcher.specialdictionaries=GeografischeNamen,Persoonsnamen
+
+# statics
+waisda.socialreference.title=Waisda?
+waisda.socialreference.homeurl=http://waisda.tuxic.nl:8080/
+waisda.socialreference.description=Would you like to play?
