--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>manbijthond</groupId>
-	<artifactId>manbijthond-web</artifactId>
+	<groupId>waisda</groupId>
+	<artifactId>waisda-web</artifactId>
 	<packaging>war</packaging>
-	<name>manbijthond</name>
+	<name>waisda</name>
 	<version>0.0.2-SNAPSHOT</version>
 
 	<properties>
@@ -385,7 +385,7 @@
 					<dependency>
 						<groupId>org.codehaus.btm</groupId>
 						<artifactId>btm</artifactId>
-						<version>2.0.1</version>
+						<version>2.1.3</version>
 					</dependency>
 					<dependency>
 						<groupId>org.codehaus.btm</groupId>
