- fixed filter expression - completed mp4 unittest

--- a/src/test/resources/nl/waisda/services/europeanaImportService-test.properties
+++ b/src/test/resources/nl/waisda/services/europeanaImportService-test.properties
@@ -4,4 +4,4 @@ waisda.import.europeana.privkey=ZyFhKLsYC
 waisda.import.europeana.rowsperquery=12
 waisda.import.europeana.profile=minimal
 waisda.import.europeana.videoextensions=.mp4, .avi, .mpg
-waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\.\-_]+?\.mp4), ([0-9a-zA-Z/:&?=%+\.\-_]+?\.avi)
+waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\\.\\-_]+?\\.mp4), ([0-9a-zA-Z/:&?=%+\\.\\-_]+?\\.avi)
