--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -30,7 +30,7 @@ waisda.import.europeana.privkey=ZyFhKLsYC
 waisda.import.europeana.rowsperquery=12
 waisda.import.europeana.profile=standard
 waisda.import.europeana.videoextensions=.mp4, .avi, .mpg
-waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\.\-_]+?\.mp4)
+waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\\.\\-_]+?\\.mp4)
 
 # special match dictionaries (dictionary names separated by cumma)
 waisda.matcher.specialdictionaries=GeografischeNamen,Persoonsnamen
