- added unittests - modified video filter to regexp only

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -29,8 +29,7 @@ waisda.import.europeana.apikey=XxxsEZoWj
 waisda.import.europeana.privkey=ZyFhKLsYC
 waisda.import.europeana.rowsperquery=12
 waisda.import.europeana.profile=standard
-waisda.import.europeana.videoextensions=.mp4, .avi, .mpg
-waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\\.\\-_]+?\\.mp4)
+waisda.import.europeana.validvideourls=(.+?\\.mp4)
 
 # special match dictionaries (dictionary names separated by cumma)
 waisda.matcher.specialdictionaries=GeografischeNamen,Persoonsnamen
