--- a/src/test/resources/nl/waisda/services/europeanaImportService-test.properties
+++ b/src/test/resources/nl/waisda/services/europeanaImportService-test.properties
@@ -3,5 +3,4 @@ waisda.import.europeana.apikey=XxxsEZoWj
 waisda.import.europeana.privkey=ZyFhKLsYC
 waisda.import.europeana.rowsperquery=12
 waisda.import.europeana.profile=minimal
-waisda.import.europeana.videoextensions=.mp4, .avi, .mpg
-waisda.import.europeana.validvideourls=([0-9a-zA-Z/:&?=%+\\.\\-_]+?\\.mp4), ([0-9a-zA-Z/:&?=%+\\.\\-_]+?\\.avi)
+waisda.import.europeana.validvideourls=(.+?\\.mp4), (.+?\\.avi)
