First version of challenging other players

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -22,3 +22,5 @@ jpa.formatSql=false
 jpa.generateDdl=true
 jpa.persistenceUnitName=nl.waisda
 jpa.hbm2ddl.auto=validate
+
+waisda.domain=localhost:8080
