Initial commit for realtime matching

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -31,6 +31,15 @@ waisda.import.europeana.rowsperquery=12
 waisda.import.europeana.profile=standard
 waisda.import.europeana.validvideourls=(.+?\\.mp4)
 
+# url for realtime matching with SKOS WebService
+# if configured, waisda? will use this for matching tags, otherwise it will use the table DICTIONARYENTRY
+#waisda.matcher.skos.restservice.url=http://data.beeldengeluid.nl/api/find-concepts?q=prefLabel:
+waisda.matcher.skos.restservice.url=
+# when waisda.matcher.skos.restservice.url is configured,
+# you need to configure where to filter on with the about tag
+# specify what the about tag must start with
+waisda.matcher.skos.start.about.tag=http://data.beeldengeluid.nl/gtaa/
+
 # special match dictionaries (dictionary names separated by cumma)
 waisda.matcher.specialdictionaries=GeografischeNamen,Persoonsnamen
 
