Changed to Tag ontology and merged openskos matching

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -33,8 +33,8 @@ waisda.import.europeana.validvideourls=(.+?\\.mp4)
 
 # url for realtime matching with SKOS WebService
 # if configured, waisda? will use this for matching tags, otherwise it will use the table DICTIONARYENTRY
-#waisda.matcher.skos.restservice.url=http://data.beeldengeluid.nl/api/find-concepts?q=prefLabel:
-waisda.matcher.skos.restservice.url=
+waisda.matcher.skos.restservice.url=http://data.beeldengeluid.nl/api/find-concepts?q=prefLabel:
+#waisda.matcher.skos.restservice.url=
 # when waisda.matcher.skos.restservice.url is configured,
 # you need to configure where to filter on with the about tag
 # specify what the about tag must start with
