--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -24,7 +24,7 @@ jpa.persistenceUnitName=nl.waisda
 jpa.hbm2ddl.auto=validate
 
 # europeana import settings
-waisda.import.europeana.baseurl=http://preview.europeana.eu/api/v2/search.json
+waisda.import.europeana.baseurl=http://www.europeana.eu/api/v2/search.json
 waisda.import.europeana.apikey=XxxsEZoWj
 waisda.import.europeana.privkey=ZyFhKLsYC
 waisda.import.europeana.rowsperquery=12
