--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,7 +14,7 @@ c3p0.acquireIncrement=1
 c3p0.maxStatements=50
 c3p0.autoCommitOnClose=true
 c3p0.numHelperThreads=3
-jpa.persistenceXmlLocation=META-INF/persistence.xml
+jpa.persistenceXmlLocation=/META-INF/persistence.xml
 jpa.test.persistenceXmlLocation=classpath:test_persistence.xml
 jpa.database=MYSQL
 jpa.showSql=false
@@ -22,3 +22,19 @@ jpa.formatSql=false
 jpa.generateDdl=true
 jpa.persistenceUnitName=nl.waisda
 jpa.hbm2ddl.auto=validate
+
+# europeana import settings
+waisda.import.europeana.baseurl=http://preview.europeana.eu/api/v2/search.json
+waisda.import.europeana.apikey=XxxsEZoWj
+waisda.import.europeana.privkey=ZyFhKLsYC
+waisda.import.europeana.rowsperquery=12
+waisda.import.europeana.profile=standard
+waisda.import.europeana.validvideourls=(.+?\\.mp4)
+
+# special match dictionaries (dictionary names separated by cumma)
+waisda.matcher.specialdictionaries=GeografischeNamen,Persoonsnamen
+
+# statics
+waisda.socialreference.title=Waisda?
+waisda.socialreference.homeurl=http://waisda.tuxic.nl:8080/
+waisda.socialreference.description=Would you like to play?
