--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 	<version>0.0.2</version>
 
 	<properties>
-		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 		<org.hibernate.version>3.5.1-Final</org.hibernate.version>
 	</properties>
 
